--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>B1GAL.github.io</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Alex Upton</h1>
+    <div class="top" id="Top">
+        <a class="active" href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="skillsets.html">SkillSets</a>
+    </div>
+    <h2>Purpose:</h2>
+    <p> The purpose here is to make a website displaying my resume/portfolio and a brief intro of myself</p>
+    <h2>Intro:</h2>
+
+    <p>This site shows the purpose of this site which is the home page, a page of my personal info about, a page showing my projects, and my skill sets</p>
 </body>
 </html>
