--- a/skillsets.html
+++ b/skillsets.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
 
-</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>SkillSets:</h1>
+<p>
+    Basic Computer/Hardware skills
+    • Strong speech and communication skills
+    • Proficient in MS Office: Excel, Word, PowerPoint, and Outlook
+    • Basic SQL skills
+</p>
 </body>
 </html>
