--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Projects:</h1>
+    <p>Sadly I have not partaken in any projects to which I feel any pride in mentioning</p>
 </body>
 </html>
