almost done with hw 8

--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>B1GAL.github.io</title>
+    <title>My Personal Website</title>
+    <link rel="stylesheet" href="StyleSheet1.css" />
 </head>
-<body>
-<h1>Alex Upton</h1>
-    <div class="top" id="Top">
-        <a class="active" href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="skillsets.html">SkillSets</a>
-    </div>
+<body style="background-color:crimson">
+<h1>HOME</h1>
+<div class="top" id="Top">
+    <ul id="homelist">
+        
+        <li> <a href="about.html">About</a></li>
+        <li> <a href="projects.html">Projects</a></li>
+        <li> <a href="skillsets.html">SkillSets</a></li>
+    </ul>
+</div>
     <h2>Purpose:</h2>
-    <p> The purpose here is to make a website displaying my resume/portfolio and a brief intro of myself</p>
-    <h2>Intro:</h2>
 
-    <p>This site shows the purpose of this site which is the home page, a page of my personal info about, a page showing my projects, and my skill sets</p>
+    <p>
+        Hello! My name is Alex Upton. 
+    </p>
+    <p>The purpose of this website is for me to give you employers a portfolio to view some of my best work as a student.</p>
+    <p>This website will include an about, project, and skillset page to demonstrate how I can be successful as a future employee.</p>
+   
+    
 </body>
 </html>
