--- a/skillsets.html
+++ b/skillsets.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" href="StyleSheet1.css" />
+</head>
+<body style="background-color:crimson">
+<h1>SkillSets</h1>
+    <h2>
+        <a href="index.html">back to Homepage</a>
+    </h2>
+<div>
+    <ul style="font-size:20px">
+        <li>Basic Computer/Hardware skills</li> 
+        <li>Strong speech and communication skills</li>
+        <li>Proficient in MS Office: Excel, Word, PowerPoint, and Outlook</li>
+        <li>Basic SQL and HTML skills</li>
 
-<body>
-<h1>SkillSets:</h1>
-<p>
-    Basic Computer/Hardware skills
-    • Strong speech and communication skills
-    • Proficient in MS Office: Excel, Word, PowerPoint, and Outlook
-    • Basic SQL skills
-</p>
+    </ul>
+</div>
+
+
+
 </body>
 </html>
