--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+    <link rel="stylesheet" href="StyleSheet1.css" />
+</head>
+<body style="background-color:crimson">
 <h1>Projects:</h1>
+<h2><a href="index.html">back to Homepage</a></h2>
     <p>Sadly I have not partaken in any projects to which I feel any pride in mentioning</p>
 </body>
 </html>
