--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,11 @@
 <body style="background-color:crimson">
 <h1>Projects:</h1>
 <h2><a href="index.html">back to Homepage</a></h2>
-    <p>Sadly I have not partaken in any projects to which I feel any pride in mentioning</p>
+    <p>Here are the projects I have worked on as my time as a student at OU</p>
+    <ul style="list-style-type:circle">
+        <li>Database Project</li>
+        <li>Matrix Vendor Project (currently)</li>
+        <li>Programming project for Love's (currently)</li>
+    </ul>
 </body>
 </html>
